[package]
name = "storage"
version = "0.1.0"
edition = "2021"
authors = ["susun sujinyanslip@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["cache"]
categories = ["cache"]
description = "A high-performance hybrid cache solution for Rust."
repository = "https://github.com/xiaguan/cache-rainbow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
rand = "0.8.4"
csv = "1.3"
crc32fast = "1.4.0"

[[bench]]
name = "storage_bench"
harness = false
